--- a/htdocs/css/library-test-colors.css
+++ b/htdocs/css/library-test-colors.css
@@ -184,7 +184,7 @@ nav li a
 
 .tone-box 
 {
-	background: #fff;
+	background: #fefefe;
 	border-bottom: 3px solid  #959595;
 }
 
@@ -234,7 +234,7 @@ input[type=submit]:hover
 
 input[type=button]
 {
-    color: #000;
+    color: #fff;
 }
 
 input[type=button]:hover
