--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -172,7 +172,7 @@ $('document').ready(function(){
     <p><TMPL_VAR NAME="username"></p>
     <p id="library_name"><TMPL_VAR NAME="library"></p>
     <p id="lid"><TMPL_VAR NAME="lid"></p>
-    <input id="theme1" class="library-style" type="button" value="A" />
+    <input id="theme1" class="library-style3" type="button" value="A" />
     <input id="theme2" class="library-style2" type="button" value="A" />
     <input id="incrFont" class="library-style" type="button" value="+" />
     <input id="decrFont" class="library-style" type="button" value="-" />
