--- a/htdocs/css/library-standard-colors.css
+++ b/htdocs/css/library-standard-colors.css
@@ -265,8 +265,8 @@ input[type=text], input[type=password]
 }
 
 .library-style2 {
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   border: 0px;
 }
 
