--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -1032,7 +1032,7 @@ footer {
         margin-bottom: 1em;
         font-size: 1.2em;
 }
-.record 
+
 .primary_info {
 	text-align: left;
 }
@@ -1040,4 +1040,4 @@ footer {
 .secondary_info {
 	text-align: left;
 }
-
+}
