--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -1001,7 +1001,8 @@ input[type=text]
 
 #welcome-text {
  	font-weight: bold;
- 	font-size: 1.4em;
+ 	font-size: 1.5em;
+ 	color: red;
 }
 
 #aside-img-right
