New file structure

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -9,9 +9,9 @@
 
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.no-colors.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css">
-  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/library-standard-colors.css">
+  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
 
-  <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
+  <link type="text/css" rel="stylesheet" href=" "></link>
   <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
 
   <!-- jQuery-UI theme:
