--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
 
-  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.no-colors.css">
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css">
   <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
 
