--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -166,6 +166,40 @@
     margin-bottom: 1em;
 }
 
+/* action button styles for data table buttons */
+input[type="button"].action-button {
+    margin: .5em;
+    padding: .3em 1em;
+    font-size: 1em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"]:hover.action-button {
+    margin: .5em;
+    padding: .3em 1em;
+    font-size: 1em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"].action-button-highlighted {
+    margin: .5em;
+    padding: .3em 1em;
+    font-size: 1em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"]:hover.action-button-highlighted {
+    margin: .5em;
+    padding: .3em 1em;
+    font-size: 1em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+
 
 /***---End of new library client side CSS--**/
 
