added div for footer fix

--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -79,6 +79,7 @@ $('document').ready(function(){
 	  </form>
 	</div>
   </div>
+  </div>
 
   <div class="innerLeft">
 	<h3>(3. Canada Post Shipping Tool)</h3>
