--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -9,6 +9,7 @@
 
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css">
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
   <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
 
   <link type="text/css" rel="stylesheet" href=" "></link>
