--- a/htdocs/css/themes-library-colors.css
+++ b/htdocs/css/themes-library-colors.css
@@ -234,7 +234,7 @@ input[type=submit]:hover
 
 input[type=button]
 {
-  background-color: #06a0ca;
+  background-color: #0f4072;
   color: #fff;
   font-size: 1em;
 }
