--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -54,7 +54,7 @@ $('document').ready(function(){
 	  <table id="datatable_report">
 	    <thead>
       <tr>
-    <th colpsan="3">Date</th><th colspan="5">Borrowing</th><th colspan="5">Lending</th>
+    <th colspan="3">Date</th><th colspan="5">Borrowing</th><th colspan="5">Lending</th>
         </tr>
 	  <tr>
 		<th>Year</th><th>MonthNum</th><th>Month</th><th>Books requested</th><th>Actual requests</th><th>Unfilled responses</th><th>Lender shipped</th><th>We cancelled</th><th>Requests to lend</th><th>Could not fill</th><th>Shipped</th><th>Forward to branch</th><th>Borrower cancelled</th>
