--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -14,11 +14,11 @@
     <input TYPE="hidden" NAME="lid" VALUE="<TMPL_VAR NAME=editLID>">
     <input TYPE="hidden" NAME="name" VALUE="<TMPL_VAR NAME=editName>">
  
-		<label for="email_address">Email address:</label>
+		<label for="email_address">Email address:</label><br>
 	  	<input TYPE="text" NAME="email_address" SIZE="80" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editEmail>">
 	
     <h3>Interlibrary Loan Mailing address</h3> 
-		<label for="library">Library:</label>
+		<label for="library">Library:</label><br>
 	  	<input TYPE="text" NAME="library" SIZE="80" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editLibrary>"><br />
 	
 	    <label for="mailing_address_line1">Street address or PO Box Number:</label>
