removed inline styles from z server

--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -167,29 +167,29 @@ function set_secondary_tab(tab_id) {
     
 <h4>General</h4>
 <table id="fill-table">
-	<tr><td width="10%">success?</td><td width="80%" id="success">...</td></tr>
+	<tr><td>success?</td><td id="success">...</td></tr>
 	<tr><td>libsym</td><td id="libsym">...</td></tr>
       </table>
 
 <h4>Connection</h4>
 <table id="fill-table">
-	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_connection_success">...</td></tr>
+	<tr><td>success?</td><td id="zServer_status_connection_success">...</td></tr>
 	<tr><td>connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
 
 <h4>Search</h4>
 <table id="fill-table">
-	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_search_success">...</td></tr>
+	<tr><td>success?</td><td id="zServer_status_search_success">...</td></tr>
 	<tr><td>type</td><td id="zServer_status_search_type">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_search_status">...</td></tr>
 	<tr><td>pqf</td><td id="zServer_status_search_pqf">...</td></tr>
-	<tr><td># found</td><td id="zServer_status_search_found">...</td></tr>
+	<tr><td>Number found</td><td id="zServer_status_search_found">...</td></tr>
       </table>
 
 <h4>Record</h4>
 <table id="fill-table">
-	<tr><td width="10%">success?...</td><td width="80%" id="zServer_status_record_success">...</td></tr>
+	<tr><td>success?...</td><td id="zServer_status_record_success">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_record_status">...</td></tr>
 	<tr><td>author</td><td id="zServer_status_record_author">...</td></tr>
 	<tr><td>title</td><td id="zServer_status_record_title">...</td></tr>
