--- a/htdocs/css/Old-CSS/fILL-public-accessible.1.1b.css
+++ b/htdocs/css/Old-CSS/fILL-public-accessible.1.1b.css
@@ -11,24 +11,29 @@
 /* unvisted link */
  a:link {
  	text-decoration: none;
+	color: #183935;
 }
 
 /* visited link */
  a:visited {
+	color: #183935;
 }
 
 /* mouse over link */
  a:hover {
  	text-decoration: none;
+	color: #383;
 }
 
 /*focus over link*/
 a:focus {
 	text-decoration: none;
+	color: #383;
 }
 
 /*selected link */
  a:active {
+	color: #183935;
 }
 
 html, body {
@@ -36,6 +41,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    background: #f3f3f3;
     font-size: 100%;  /* permits better scaling (all other font sizes in em) */
 }
 
@@ -49,6 +55,7 @@ img
 h1 {
 	display: inline;
 	margin-bottom: .5em;
+	color: #183935;
 	font-size: 1.4em;
 	text-transform: capitalize;
 }
@@ -56,11 +63,14 @@ h1 {
 h2 {
 	display: inline;
 	margin-bottom: .5em;
+	color: #183935;
 	font-size: 1.2em;
 	text-transform: capitalize;
 }
 
 h3 {
+	
+	color: #183935;
 	font-size: 1em;
 	font-weight: bold;
 }
@@ -68,7 +78,6 @@ h3 {
 #container
 {
 	margin: auto;
-
 	width: 90%;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
@@ -79,7 +88,6 @@ h3 {
 header {
 	margin-top: 1em;
 	padding-top: .5em;
-
 }
 
 #header-left {
@@ -111,6 +119,7 @@ header {
 	height: 2em;
 	font-size: 1.1em;
 	font-weight: bold;
+	color: #505050;
 	text-transform: capitalize;
 	margin-bottom: .5em;
 }
@@ -126,6 +135,7 @@ header {
     float: right;
     clear: right;
     display: inline;
+    color: #505050;
     text-align: right;
     font-size: .8em;
     margin: 1em;
@@ -138,7 +148,6 @@ nav
 	display: block;
 	float: left;
 	width: 100%;
-
 	font-size: 1.4em;
 }
 
@@ -170,30 +179,42 @@ nav li a
 	display: block;
 	float: left;
 	width: 100%;
-
 	font-size: 1.4em;
+	border-bottom: #06a0ca solid 5px;
 }
 
 /* #pub-nav-primaryigation link states */
 /* unvisted link */
 #pub-nav-primary li a:link {
+ 	background: #183935;/*Main dark green colour*/
  	text-decoration: none;
+	color: #fff;
 }
 /* visited link */
 #pub-nav-primary li a:visited {
+	background: #183935;
+	color: #fff;
 }
 /* mouse over link */
 #pub-nav-primary li a:hover { 
+	background: #06a0ca; 
+	color: #fff;
 }
 /*selected link */
 #pub-nav-primary li a:active {
+	background: #183935;
+	color: #fff;
 }
 
 /* focus over link */
 #pub-nav-primary li a:focus { 
+	background: #06a0ca; 
+	color: #fff;
 }
 
 #pub-nav-primary li a.current_tab {
+	background: #06a0ca; 
+	color: #fff;
 }
 #search-container {
 	width: 100%;
@@ -204,7 +225,6 @@ nav li a
 {
 	float: left;
 	width: 100%;
-
 	display: inline;
   	
   	margin-bottom: 1.2em;
@@ -212,6 +232,7 @@ nav li a
   	text-align: center;
 	display: block;
   	padding: 1.25em; 
+  	border-bottom: 5px solid #e3e3e3;
 }
 
 #main
@@ -242,13 +263,16 @@ nav li a
 	height:15px;
 	width:60%;
 	max-width: 160px;
+	background-color:#f3f3f3;
+	border:1px solid #b3b3b3;
 	padding:0px;
 	overflow: hidden !important;
 }
 #progress_filler {
 	height:15px;
-/*	width:xxxx;  */ /*is styled in 'fill-client-public.js'*/
+	/* width:xxxx;  /*is styled in 'fill-client-public.js'*/
 	left:1px;
+	background-color:#b3b3b3;
 	padding-top:5px;
 	padding:0px;
 	position:relative;
@@ -279,7 +303,7 @@ nav li a
 
 #aside-img-welcome {
 	float: left;
-	width: 40%;
+	width: 30%;
 	height: auto;
 	min-height: 100% !important;
 	margin-bottom: 1.5em;
@@ -293,7 +317,7 @@ nav li a
 	float: left;
 	width: 50%;
 	height: auto;
-	margin: .9em;
+	margin: .9em 0em;
   	padding: 1.25em;  
 }
 
@@ -302,7 +326,13 @@ nav li a
 	border: 0px;
 	height: auto;
 	padding: 1em;
+	padding-bottom: 2em;
 	margin-top: 1em;
+}
+
+#welcome-text {
+ 	font-weight: bold;
+ 	font-size: 1.5em;
 }
 
 #aside-img-right
@@ -329,21 +359,28 @@ nav li a
 
 .tone-box 
 {
+	background: #e3e3e3;
+	border-bottom: 3px solid  #b3b3b3;
 }
 
 .lighter-box {
+	
 }
 
 .covers {
 	height: 220px;
 	width: 150px;
+	border: 3px solid #e3e3e3;
 	margin-top: 2em;
 	margin: 3px;
 }
+
 .covers:hover {
+	border: 3px dashed #c0c0c0; 
 }
 
 .covers:focus {
+	border: 3px dashed #c0c0c0; 
 }
 
 footer
@@ -351,6 +388,8 @@ footer
 	clear: both;
 	display: block;
 	width: 100%;
+	border-bottom: 3px solid #aabdba;
+	background: #d9efec;
 	text-align: center;
 	padding: .5em;
 	font-size: .8em;
@@ -362,18 +401,26 @@ input[type=text]
 {
 	margin: .5em 1em;
 	padding: .3em;
+    background-color: #fff;
+    border:solid 2px #b3b3b3;
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
+    
+    border: 2px #c3c3c3 solid;
 }
 
 input[type=password]
 {
 	margin: .5em 1em;
 	padding: .3em;
+    background-color: #fff;
+	border:solid 2px #b3b3b3;
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
+    
+    border: 2px #c3c3c3 solid;
 }
 
 input[type=submit]
@@ -381,6 +428,7 @@ input[type=submit]
     margin: .5em;
 	padding: .3em 1em;
 	border-radius: 5px;
+    color: #fff;
     font-size: 1.4em;
     width: auto;
     text-transform:capitalize;
@@ -391,6 +439,8 @@ input[type=submit]:hover
     margin: .5em;
 	padding: .3em 1em;
 	border-radius: 5px;
+	background-color: #06a0ca;
+	color: #fff;
     font-size: 1.4em;
     width: auto;
     text-transform:capitalize;
@@ -401,7 +451,7 @@ input[type=button]
     margin: .5em;
 	padding: .3em 1em;
 	border-radius: 5px;
-    font-size: 1.4em;
+    font-size: 1em;
     width: auto;
     text-transform:capitalize;
 }
@@ -411,7 +461,7 @@ input[type=button]:hover
     margin: .5em;
 	padding: .3em 1em;
 	border-radius: 5px;
-    font-size: 1.4em;
+    font-size: 1em;
     width: auto;
     text-transform:capitalize;
 }
@@ -430,13 +480,14 @@ input[type=submit]:focus
 input[type=text], input[type=password]
 {
     border-radius:5px;
-    border: 2px solid;
-    border-color: inherit;
+    border: 2px solid #b3b3b3;
 }
 
 .public-style {
+	background-color: #183935;
 	margin: .5em;
 	padding: .3em 1em;
+    color: #fff;
     font-size: 1.4em;
     width: auto;
     text-transform:capitalize;
@@ -445,8 +496,10 @@ input[type=text], input[type=password]
 }
 
 .library-style {
+	background-color: #0f4072;
 	margin: .5em;
 	padding: .3em 1em;
+    color: #fff;
     font-size: 1.4em;
     width: auto;
     text-transform:capitalize;
@@ -466,9 +519,11 @@ input[type=text], input[type=password]
 }
 
 #fill-button:hover {
+	background: #06a0ca;
 }
 
 #fill-button:focus {
+	background: #06a0ca;
 }
 
 #butlink {
@@ -476,12 +531,14 @@ input[type=text], input[type=password]
 	border: 1px solid;
 	border-color: inherit;
 	margin: 10px;
+	color: #fff !important;
 	font-size: 1.4em;
 	text-transform: capitalize;
 	cursor: pointer;
 }
 
 #butlink:link {
+	color: #fff;
 }
 
 #butlink:visited {
@@ -489,12 +546,17 @@ input[type=text], input[type=password]
 }
 
 #butlink:hover {
+	background-color: #06a0ca;
+	border: 1px solid #06a0ca;
 }
 
 #butlink:focus {
+	background-color: #06a0ca;
+	border: 1px solid #06a0ca;
 }
 
 #butlink:active {
+	
 }
 
 button {
@@ -502,6 +564,7 @@ button {
 	margin: .5em;
 	padding: .3em;
 	margin: 10px;
+	color: #fff !important;
 	font-size: 1.4em;
 	text-transform: capitalize;
 	cursor: pointer;
@@ -514,15 +577,19 @@ button {
 	margin: .5em;
 	padding: .3em;
 	margin: 10px;
+	color: #fff !important;
 	font-size: 1.4em;
 	text-transform: capitalize;
 	cursor: pointer;
 }
 
 .button-left:hover {
+	background-color: #06a0ca;
+
 }
 
 .button-left:focus {
+	background-color: #06a0ca;
 }
 
 .button-right {
@@ -532,6 +599,7 @@ button {
 	margin: .5em;
 	padding: .3em;
 	margin: 10px;
+	color: #fff !important;
 	font-size: 1.4em;
 	text-transform: capitalize;
 	cursor: pointer;
@@ -544,6 +612,7 @@ button {
 
 /*discontinued for text based fill logo
 .fill {
+	color:#fff; 
 	font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
 }*/
 
@@ -552,6 +621,7 @@ button {
 	display: inline;
 	float: right;
 	text-align: right;
+	background: red;/*dev test remove later*/
 }
 
 /* Search page / search results */
@@ -567,6 +637,9 @@ div.termtitle {
 #fill-table {
   	border-collapse: collapse;
   	margin: 1em auto;
+	background: #e3e3e3;
+	border: 2px solid #b3b3b3;
+	color: #505050;
 	padding: .5em;
 }
 
@@ -580,6 +653,7 @@ div.termtitle {
 }
 
 #fill-table td, #fill-table th {
+  border: 1px solid #fff;
 }
 #fill-table tr:first-child th {
   border-top: 0;
@@ -608,14 +682,17 @@ div.termtitle {
 }
 
 #bison-container {
+	background-color: #fff;
 }
 
 .note {
 	font-size: .5em;
+	color: #b3b3b3;
 }
 
 .indent {
     padding-left: .5cm;
+    color: #505050;
 }
 
 #clear {
@@ -645,6 +722,8 @@ div.termtitle {
 .login-content {
   display: block;
   clear: both;
+  border-bottom: 5px solid #b3b3b3;
+  background: #e3e3e3;
   font-size: 1em;
   font-family: sans-serif;
 }
@@ -654,10 +733,17 @@ div.termtitle {
 }
 
 .login-header {
+  background-color: #183935;
+  height: 3em;
+}
+
+.login-header-library {
+  background-color: #0f4072;
   height: 3em;
 }
 
 .login-header-title {
+  color: #fff;
   font-size: 2em;
   padding: .5em;
 }
@@ -695,12 +781,39 @@ div.login input {
   margin-left: 10px;
 }
 
+/*
+image courtesy of http://www.famfamfam.com/lab/icons/silk/ 
+#authen_loginfield {
+  background-color: #fff;
+  border-top: solid 1px #565656;
+  border-left: solid 1px #565656;
+  border-bottom: solid 1px #a2aac4;
+  border-right: solid 1px #a2aac4;
+  padding: 2px 0 2px 18px;
+  margin: 0.3em 1.5em;
+  width: 12em;
+}
+image courtesy of http://www.famfamfam.com/lab/icons/silk/  
+#authen_passwordfield {
+  background-color: #fff;
+  border-top: solid 1px #565656;
+  border-left: solid 1px #565656;
+  border-bottom: solid 1px #a2aac4;
+  border-right: solid 1px #a2aac4;
+  padding: 2px 0 2px 18px;
+  margin: 0.3em 1.5em;
+  width: 12em;
+}
+*//*dev test*/
 
 #divChangePass { 
 	display: none;
 	padding: .8em;
   	width: 70%;
   	margin: auto;
+	background: #f3f3f3;
+	border: 2px solid #505050;
+	color: #505050;
 	padding: .5em;
 }
 
@@ -718,23 +831,31 @@ div.login input {
 .primary_info {
 	width: 95%;
 	margin: .5em;
+	background-color: #e3e3e3;
 	padding: .7em;
+	border: 2px solid #b3b3b3;
 	float: left;
 	clear: left;
 }
 
 .details {
+	border-top: 1px solid #b3b3b3; 
+	border-bottom: 1px solid #ffffff;
 	padding: 1em; 
+	background-color: #f3f3f3; 
 	margin: 5px;
 }
 
 .secondary_info {
 	display: none; 
 	width: 100%; 
+	background-color: #f3f3f3; 
 	font-size: .8em; 
+	color: #505050;
 }
 
 #pager {
+	color: #183935;
 }
 
 /*------------------------------------------------------*/
@@ -760,156 +881,156 @@ div.login input {
 
 @media screen 
 and (max-width : 65em) 
+
 {
 
-    #container
-    {
+#container
+{
 	margin: .5em;
-	
 	width: 95%;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
-    }
-    
-    button {
+}
+
+button {
 	font-size: 1.2em;
 	margin: 1em;
-    }	
+}	
 
-    #header-left {
+#header-left {
 	width: 100%;
 	height: auto;
 	display: block;
-    }
+}
 
-    #header-right {
+#header-right {
 	float: left;
  	width: 100%;
  	margin-top: 1em;
  	display: block;
-    }
-    
-    nav li a
-    {
+}
+
+nav li a
+{
 	margin: .3em;
 	display: block;
 	font-size: 1.2em;
 	float: left;
 	padding: 5px 10px;
 	text-decoration: none;
-    }
-    
-    input[type=text]
-    {
+}
+
+input[type=text]
+{
 	margin: .5em .5em;
 	padding: .3em;
-	font-size: 1.4em;
-	padding-left:.7em;
-	width: 90%;
-    }
-    
-    #search-container {
+    background-color: #fff;
+    border:solid 1px #505050;
+    font-size: 1.4em;
+    padding-left:.7em;
+    width: 90%;
+    border: 2px #c3c3c3 solid;
+}
+
+#search-container {
 	width: 100%;
 	display: block;
 	margin: 1em;
-    }
-    
-    .login {
-	display: block;
-	clear: both;
-	width: 100%;
-	margin: auto;
-    }
-    
-    #main
-    {
+}
+
+.login {
+  display: block;
+  clear: both;
+  width: 100%;
+  margin: auto;
+}
+
+#main
+{
 	display: block;
 	width: 95%; 
   	padding: 1em; 
   	margin-bottom: 1em;
-    }
-    
-    #aside
-    {
+}
+
+#aside
+{
 	width: 95%;
 	margin-bottom: 1.5em;
 	display: block;
   	padding: 1em; 
-    }
-    
-    #main-info-left
-    {
+}
+
+#main-info-left
+{
 	width: 100%;
 	margin-bottom: 1em;
 	display: block;
   	padding: 1.25em; 
   	
-    }
-    
-    #main-info-right
-    {
+}
+
+#main-info-right
+{
 	width: 100%;
 	margin-bottom: 1em;
 	display: block;
   	padding: 1.25em;  	
-    }
-    
-    #aside-img-welcome {
-	
+}
+
+#aside-img-welcome {
+
 	display: none;
-    }
-    
-    #main-info-welcome 
-    {
+}
+
+#main-info-welcome 
+{
 	width: 100%;
 	height: auto;
 	margin: .9em;
   	padding: 1.25em;  
-    }
-    
-    #welcome-box {
-	font-size: 1.2em;
+}
+
+#welcome-box {
 	border: 0px;
 	height: auto;
 	padding: 1em;
 	margin-top: 1em;
-    }
-    
-    #aside-img-right
-    {
+}
+
+#aside-img-right
+{
 	width: 100%;
 	margin-bottom: 1.5em;
 	display: block;
   	padding: 0px; 
   	font-size: 1.2em;
-    }
-    
-    #aside-img-left
-    {
+}
+
+#aside-img-left
+{
 	width: 100%;
 	margin-bottom: 1.5em;
 	display: block;
   	padding: 0px;
   	font-size: 1.2em; 
-    }
-    
-    footer {
+}
+
+footer {
 	width: 100%;
 	display: block;
-    }
-    
-    .record {
+}
+
+.record {
         margin-bottom: 1em;
         font-size: 1.2em;
-    }
-    .record 
-    .primary_info {
-	text-align: left;
-    }
-    
-    .secondary_info {
-	text-align: left;
-    }
-} /* end of @media */
+}
 
+.primary_info {
+	text-align: left;
+}
 
+.secondary_info {
+	text-align: left;
+}
+}
