z server dev test

--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -167,15 +167,15 @@ function set_secondary_tab(tab_id) {
     
 <h4>General</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td>success?</td><td id="success">...</td></tr>
-	<tr><td>libsym</td><td id="libsym">...</td></tr>
+	<tr><td style="width:25%">success?</td><td id="success">...</td></tr>
+	<tr><td style="width:25%">libsym</td><td id="libsym">...</td></tr>
       </table>
 
 <h4>Connection</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td>success?</td><td id="zServer_status_connection_success">...</td></tr>
-	<tr><td>connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
-	<tr><td>status</td><td id="zServer_status_connection_status">...</td></tr>
+	<tr><td style="width:25%">success?</td><td id="zServer_status_connection_success">...</td></tr>
+	<tr><td style="width:25%">connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
+	<tr><td style="width:25%">status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
 
 <h4>Search</h4>
