z server dev test complete

--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -167,32 +167,32 @@ function set_secondary_tab(tab_id) {
     
 <h4>General</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td style="width:25%">success?</td><td id="success">...</td></tr>
-	<tr><td style="width:25%">libsym</td><td id="libsym">...</td></tr>
+	<tr><td style="width:20%">success?</td><td id="success">...</td></tr>
+	<tr><td style="width:20%">libsym</td><td id="libsym">...</td></tr>
       </table>
 
 <h4>Connection</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td style="width:25%">success?</td><td id="zServer_status_connection_success">...</td></tr>
-	<tr><td style="width:25%">connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
-	<tr><td style="width:25%">status</td><td id="zServer_status_connection_status">...</td></tr>
+	<tr><td style="width:20%">success?</td><td id="zServer_status_connection_success">...</td></tr>
+	<tr><td style="width:20%">connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
+	<tr><td style="width:20%">status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
 
 <h4>Search</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td>success?</td><td id="zServer_status_search_success">...</td></tr>
-	<tr><td>type</td><td id="zServer_status_search_type">...</td></tr>
-	<tr><td>status</td><td id="zServer_status_search_status">...</td></tr>
-	<tr><td>pqf</td><td id="zServer_status_search_pqf">...</td></tr>
-	<tr><td>Number found</td><td id="zServer_status_search_found">...</td></tr>
+	<tr><td style="width:20%">success?</td><td id="zServer_status_search_success">...</td></tr>
+	<tr><td style="width:20%">type</td><td id="zServer_status_search_type">...</td></tr>
+	<tr><td style="width:20%">status</td><td id="zServer_status_search_status">...</td></tr>
+	<tr><td style="width:20%">pqf</td><td id="zServer_status_search_pqf">...</td></tr>
+	<tr><td style="width:20%">Number found</td><td id="zServer_status_search_found">...</td></tr>
       </table>
 
 <h4>Record</h4>
 <table id="fill-table" class="table-width-lib">
-	<tr><td>success?...</td><td id="zServer_status_record_success">...</td></tr>
-	<tr><td>status</td><td id="zServer_status_record_status">...</td></tr>
-	<tr><td>author</td><td id="zServer_status_record_author">...</td></tr>
-	<tr><td>title</td><td id="zServer_status_record_title">...</td></tr>
+	<tr><td style="width:20%">success?...</td><td id="zServer_status_record_success">...</td></tr>
+	<tr><td style="width:20%">status</td><td id="zServer_status_record_status">...</td></tr>
+	<tr><td style="width:20%">author</td><td id="zServer_status_record_author">...</td></tr>
+	<tr><td style="width:20%">title</td><td id="zServer_status_record_title">...</td></tr>
 </table>
 
 <h4>Log</h4>
