--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -260,20 +260,8 @@ input[type=text], input[type=password]
 }
 
 .library-style {
-    background-color: #BA1010;
+    background-color: #841313;
     color: #fff;
-}
-
-.library-style2 {
-  background-color: #fff;
-  color: #000;
-  border: 0px;
-}
-
-.library-style3 {
-    background-color: #0f4072;
-    color: #fff;
-    border: 0px;
 }
 
 #fill-button {
@@ -722,4 +710,20 @@ and (max-width : 65em)
 /* end of "From fILL-library-accessible.1.0.css" */
 
 
-
+/* action button styles for data table buttons */
+input[type="button"].action-button {
+    background-color: #841313;
+    color: #fff;
+}
+input[type="button"]:hover.action-button {
+    background-color: #ca0606;
+    color: #fff;
+}
+input[type="button"].action-button-highlighted {
+    background-color: #CAA906;
+    color: #fff;
+}
+input[type="button"]:hover.action-button-highlighted {
+    background-color: #E9D15E;
+    color: #fff;
+}
