--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -97,7 +97,7 @@ $('document').ready(function(){
         $("#csstheme").attr("href", "/css/themes-library-allison.css");
 	$("#themeroller-css").attr("href","/themes/Blitzer/jquery-ui.css");
 	$("#theme-logo").attr("src","/img/fill-lib-logo-theme2.png");
-	$.cookie('fILL-theme','theme2', { expires: 7, path: '/' });
+	$.cookie('fILL-theme','theme3', { expires: 7, path: '/' });
     });
 
     $('#incrFont').click(function () {
@@ -179,9 +179,9 @@ $('document').ready(function(){
     <p><TMPL_VAR NAME="username"></p>
     <p id="library_name"><TMPL_VAR NAME="library"></p>
     <p id="lid"><TMPL_VAR NAME="lid"></p>
-    <input id="theme1" class="library-style3" type="button" value="A" />
-    <input id="theme2" class="library-style2" type="button" value="A" />
-    <input id="theme3" class="library-style" type="button" value="A" />
+    <input id="theme1" class="theme-chooser1" type="button" value="A" />
+    <input id="theme2" class="theme-chooser2" type="button" value="A" />
+    <input id="theme3" class="theme-chooser3" type="button" value="A" />
     <input id="incrFont" class="library-style" type="button" value="+" />
     <input id="decrFont" class="library-style" type="button" value="-" />
   </div>
