small changes added no colours back

--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -68,7 +68,7 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv"><br />
-    <div class="innerLeft">
+    <div class="innerLeft tone-box">
 	   <h3>1. Set the due date</h3>
 	<div id="defaultDueDate">
 	  <form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change due date'; return false;">
